# clean-architecture_rs

./: :w  Cargo.toml  README.md  build.rs
proto/: user-api.proto
src/: lib.rs  main.rs
src/domain/entity/: mod.rs  user.rs  vo.rs
src/interface_adapter/: controller.rs
src/util/: mod.rs
