[package]
name = "clean_architecture_rs"
version = "0.1.0"
edition = "2018"

[dependencies]
# utils
anyhow = "1.0.28"
ulid = "0.3.1"
derive-getters = "0.1.0"
derive_more = "0.99.5"
derive-new = "0.5.8"
serde = { version = "^1.0.101", features = ["derive"] }
thiserror = "1.0.15"

actix-web = "3"

# grpc
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.5"
